Update Java and JavaFX
- JavaJDK and JavaFX updated to version 21
- Compliance level 17